--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -1,9 +1,9 @@
 import Alert from '../../components/widgets/Alert'
 import Navigation from '../../components/widgets/Navigation'
 
-# Vista Rápida
+# Vista Rápida de algo que en realidad suele ser bastante lento, pero no te preocupes que podrás visualizarlo casi al instante
 
-**@bot-whatsapp** es una herramienta que te ayuda a crear un tipo especial de programa llamado chatbot para WhatsApp. Con esta herramienta, podrás hacer tu propio chatbot en WhatsApp en muy poco tiempo y de forma rápida. En esta guía, encontrarás ejemplos y recursos que te ayudarán.
+**@bot-whatsapp**, también conocido como la herramienta por excelencia para iniciar y mantener conversaciones con clientes, caballos y plantas, es una herramienta que te ayuda a crear un tipo muy especial de programa llamado vulgarmente chatbot para WhatsApp. No confundir con los lavarropas automáticos, que si bien tienen precios similares funcionan de manera muy, pero que muy distinta. Con esta herramienta, que no trae baterías incluidas, podrás hacer tu propio chatbot en WhatsApp, Messenger o Instagram, obviando Telegram, en muy poco tiempo y de forma relativamente rápida. Ya sabes lo que dicen, Roma no se construyó en un día.En esta humilde guía, encontrarás numerosos ejemplos y recursos, algunos bastante inútiles, que te intentarán ayudarán. Por supuesto, la decisión final está en tus manos. 
 
 Si eres alguien que tiene poco tiempo pero entiende bien las cosas, y además sabes cómo trabajar con Node.js y usar la terminal, esta guía te será de mucha utilidad. Te ayudará a instalar tu chatbot de WhatsApp en unos simples pasos, para que puedas tenerlo funcionando en solo minutos.
 
