--- a/packages/docs/src/routes/docs/join/index.mdx
+++ b/packages/docs/src/routes/docs/join/index.mdx
@@ -1,25 +1,27 @@
 # Unirme
 
-Bienvenido al proyecto! Estamos emocionados de tenerte a bordo y esperamos trabajar contigo.
+Bienvenido al proyecto! Estamos ciertamente emocionados de tenerte a bordo, colaborando en lo que puedas, y esperamos trabajar y estrechar vínculos contigo.
 
-Deseamos que te sientas cómodo y que puedas aportar tu valioso conocimiento y habilidades.
+Sabemos que el camino para convertirte en un desarrollador profesional no es nada fácil, pero con una cuota de suerte y teniendo contactos puedes abrirte paso. 
 
-Recuerda que si tienes alguna inquietud, o simplemente deseas interactuar con los otros colaboradores puedes unirte a la comunidad.
+Deseamos que te sientas cómodo, pero no tanto como para que te quedes dormido, y que puedas aportar tu valioso granito de arena, y también algún que otro aporte en conocimiento y habilidades.
+
+Recuerda que si tienes alguna inquietud, o simplemente deseas interactuar con los otros colaboradores, te recomendamos primero leer la documentación oficial. No queremos fomentar la vagancia. Después de hacer eso, puedes intentar unirte a la comunidad. Es un proceso complicado pero tampoco es imposible. Vamos, que el Leicester ganó la premier en 2016. 
 
 ---
 
-## Ventajas al unirme
+## Ventajas super discretas al unirme
 
-Participar en un proyecto de código abierto te permite aprender de manera práctica sobre tecnologías y metodologías de desarrollo de software. También puedes aprender de otros desarrolladores y contribuir a la comunidad de código abierto.
+Participar abiertamente en un proyecto de código abierto, previa capacitación por supuesto, te permite aprender de manera práctica, aunque no tan didáctica, sobre tecnologías y metodologías que se van creando periódicamente en el mundo de desarrollo de software. También puedes, si así lo deseas, aprender de otros desarrolladores que programen en tu lenguaje favorito y contribuir con tu experiencia y dedicación a la comunidad de código abierto.
 
-Al unirte te estará brindando la oportunidad de **adquirir experiencia en el desarrollo de software** y en el trabajo en equipo. Esto puede ser muy valioso para tu currículum y para tu carrera profesional.
+Al unirte al canal de discord te estará brindando la oportunidad de **adquirir experiencia en el desarrollo integral y sostenido subsecuentemente en el tiempo de software** y en el trabajo en equipo. Esto puede ser realmente muy valioso para tu currículum y para tu carrera profesional, teniendo en cuenta que el mundo se consume en dinero.
 
-La visibilidad es uno de los puntos que más se requieren hoy en día, al unirte se te brinda la oportunidad de **mayor visibilidad en la comunidad de desarrolladores y de demostrar tus habilidades**. Esto puede ayudarte a encontrar oportunidades de trabajo o a colaborar con otros proyectos.
+La visibilidad es uno de los puntos que más se requieren a la hora de rentar un departamento hoy en día, al unirte se te brinda una sola oportunidad de **mayor visibilidad en días nublados en la comunidad de desarrolladores y de demostrar tus habilidades**. Esto puede ayudarte a encontrar oportunidades de trabajo, que de otra manera te serían inaccesibles, o a colaborar con otros proyectos, ya sea de código abierto, entreabierto o herméticamente cerrado.
 
-Colaboración con otros desarrolladores de todo el mundo y **trabajar juntos para mejorar el proyecto** Al trabajar en equipo y colaborar con otros, podrás mejorar tu comunicación, resolución de problemas y liderazgo, habilidades que cada vez son más demandadas en el entorno laboral.
+Colaboración con otros desarrolladores de todo el mundo conocido y por conocer, y **trabajar juntos para mejorar gradual y consecutivamente el susodicho proyecto** Al trabajar en equipo y colaborar con otros, participando en tareas de integración y desarrollo del lenguaje, así como también del idioma y la cultura, podrás mejorar tu comunicación verbal y escrita, resolución de problemas inmediatos generados por las pésimas condiciones de seguridad del estadio, y liderazgo, habilidades que cada vez son más demandadas en el entorno laboral actual. No sólo eso, diría que son casi fundamentales para el correcto desarrollo de la sociedad europea. Tal es así que el mismo Fernando Torres, apodado cariñosamente como "el niño", lo comentó cuando tuvo la oportunidad en La Resistencia. Este hecho generó graves impactos en la economía sociopolítica del siglo XXI, desembocando en la consecución de cierto equipo portugués en cierta máxima competición europea a nivel clubes. Lógicamente, todo apuntaba a una hazaña épica del gran, y me pongo de pie, José Mourinho. Pero lo cierto es que no se ha demostrado fehacientemente que sea responsabilidad del veterano croata que marcó el gol en la final, en tiempo de descuento. En fin, para gustos colores.
 
-Contribución al bien común Participar en un proyecto de código abierto te permite contribuir a la comunidad y a la sociedad en general, ya que el código abierto es accesible y utilizable por cualquier persona. **Esto puede ser muy gratificante y sentirte parte de algo más grande**.
+Contribución al bien común de la comunidad en edad escolar: Participar en un proyecto de código abierto tan prestigioso como este, no solo te permite contribuir a la comunidad y a la sociedad en general, sino que también trae aparejados ciertos cambios en la estructura política del pueblo camerunés, ya que el código abierto es accesible para unos pocos, pero utilizable por cualquier persona con dos dedos de frente. Esto, por supuesto, no aplica a los casos de trillizos o cuatrillizos, pero es un buen punto de partida. **Esto puede ser muy gratificante si se comparte a la medianoche y sentirte parte insignificante de algo un poco más grande de lo que estás acostumbrado**.
 
-Es una excelente manera de incrementar tus habilidades tecnológicas y **estar al tanto de las últimas tendencias y desarrollos en el mundo del software**. Al trabajar con otros desarrolladores y contribuir a proyectos de código abierto, tendrás la oportunidad de \*\*aprender y practicar nuevas tecnologías y metodologías, lo que te ayudará a mejorar tus habilidades y a mantenerte actualizado en el mundo en constante cambio de la tecnología.
+Es una excelente manera de aprender a incrementar tus habilidades socioeconómicas, sociales y económicas, y por sobre todas las cosas tecnológicas y **estar entre uno de los pocos seres humanos en la historia que estuvieron al tanto de las últimas tendencias en el mundo de la moda y de las ventajas de unir la experiencia y los desarrollos en el mundo del software**. Al trabajar con otros desarrolladores principiantes y contribuir a proyectos de código un tanto abierto, tendrás la inolvidable oportunidad de \*\*aprender, tanto como sea posible teniendo en cuenta las inclemencias del clima, y practicar, siempre y cuando estemos en año bisiesto, nuevas tecnologías y metodologías, lo que te ayudará a mejorar tus habilidades intrínsecas y a mantenerte actualizado en el universo en constante cambio de la ciencia que estudia las bondades y los atributos de la tecnología.
 
-Esperamos que estés listo para **unirte a nosotros en esta emocionante aventura**
+Esperamos que estés listo para **unirte a nosotros y nuestras mascotas en esta emocionante aventura**
