minor corrections.mdx
fixed some minor gramatical errors

--- a/packages/docs/src/routes/docs/essential/index.mdx
+++ b/packages/docs/src/routes/docs/essential/index.mdx
@@ -15,11 +15,11 @@ El desarrollo de la librería se base en tres (3) piezas claves para su correcto
 
 ## Flow
 
-Los flujos hace referencia al hecho de construir un flujo de conversion. Esto es un flow podemos observar que estan presente dos metodos importantes **[addKeyword](/docs/add-keyword)** y el **[addAnswer](/docs/add-answers)**.
+Los flujos hacen referencia al hecho de construir un flujo de conversacion. Esto es un flow podemos observar que estan presentes dos metodos importantes **[addKeyword](/docs/add-keyword)** y **[addAnswer](/docs/add-answers)**.
 
 Tan sencillo como decir **palabra/s clave** y **mensaje a responder**
 
-Ambos metodos **[addKeyword](/docs/add-keyword)** y el **[addAnswer](/docs/add-answers)** tienen una serie opciones disponibles
+Ambos metodos **[addKeyword](/docs/add-keyword)** y **[addAnswer](/docs/add-answers)** tienen una serie opciones disponibles.
 
 ```js
 const { createBot, createProvider, createFlow, addKeyword } = require('@bot-whatsapp/bot')
