--- a/packages/docs/src/routes/docs/end-flow/index.mdx
+++ b/packages/docs/src/routes/docs/end-flow/index.mdx
@@ -2,59 +2,48 @@ import Navigation from '../../../components/widgets/Navigation'
 
 # endFlow
 
-Esta función se utiliza para finalizar un flujo con dos o más addAnswer. Un ejemplo de uso sería registrar 3 datos de un usuario en 3 preguntas destinas y que el usuario pueda finalizar por él mismo flujo. Como podrás comprobar en el ejemplo siguiente, se puede vincular flowDynamic y todas sus funciones; como por ejemplo botones.
+Esta función se utiliza para finalizar un flujo con dos o más addAnswer. Un ejemplo de uso sería registrar 3 datos de un usuario en 3 preguntas distintas y que el usuario pueda finalizar el flujo de la conversación. Como podrás comprobar en el ejemplo siguiente, se puede vincular flowDynamic y todas sus funciones; como por ejemplo botones.
 
 ```js
-let nombre;
-let apellidos;
-let telefono;
-
 const flowFormulario = addKeyword(['Hola','⬅️ Volver al Inicio'])
     .addAnswer(
         ['Hola!','Para enviar el formulario necesito unos datos...' ,'Escriba su *Nombre*'],
         { capture: true, buttons: [{ body: '❌ Cancelar solicitud' }] },
-
-        async (ctx, { flowDynamic, endFlow }) => {
+        async (ctx, { flowDynamic, endFlow, state }) => {
             if (ctx.body == '❌ Cancelar solicitud')
-             return endFlow({body: '❌ Su solicitud ha sido cancelada ❌',    // Aquí terminamos el flow si la condicion se comple
+             return endFlow({body: '❌ Su solicitud ha sido cancelada ❌',    // Aquí terminamos el flow si la condicion se cumple
                  buttons:[{body:'⬅️ Volver al Inicio' }]                      // Y además, añadimos un botón por si necesitas derivarlo a otro flow
-
-            
             })
-            nombre = ctx.body;
-            return flowDynamic(`Encantado *${nombre}*, continuamos...`)
+
+            state.update({ nombre: ctx.body });
+            return flowDynamic(`Encantado *${ctx.body}*, continuamos...`)
         }
     )
     .addAnswer(
         ['También necesito tus dos apellidos'],
         { capture: true, buttons: [{ body: '❌ Cancelar solicitud' }] },
-
-        async (ctx, { flowDynamic, endFlow }) => {
+        async (ctx, { flowDynamic, endFlow, state }) => {
             if (ctx.body == '❌ Cancelar solicitud') 
                 return endFlow({body: '❌ Su solicitud ha sido cancelada ❌',
                     buttons:[{body:'⬅️ Volver al Inicio' }]
-
-
         })
-        apellidos = ctx.body;
-        return flowDynamic(`Perfecto *${nombre}*, por último...`)
+        state.update({ apellidos: ctx.body });
+        return flowDynamic(`Perfecto *${ctx.body}*, por último...`)
         }
     )
     .addAnswer(
-        ['Dejeme su número de teléfono y le llamaré lo antes posible.'],
+        ['Déjeme su número de teléfono y le llamaré lo antes posible.'],
         { capture: true, buttons: [{ body: '❌ Cancelar solicitud' }] },
-
-        async (ctx, { flowDynamic, endFlow }) => {
+        async (ctx, { flowDynamic, endFlow, state }) => {
             if (ctx.body == '❌ Cancelar solicitud') 
                 return endFlow({body: '❌ Su solicitud ha sido cancelada ❌',
                       buttons:[{body:'⬅️ Volver al Inicio' }]
                 })
 
-
-                telefono = ctx.body;
-                return flowDynamic(`Estupendo *${nombre}*! te dejo el resumen de tu formulario
-                \n- Nombre y apellidos: *${nombre} ${apellidos}*
-                \n- Telefono: *${telefono}*`)
+                state.update({ telefono: ctx.body });
+                return flowDynamic(`Estupendo *${state.nombre}*! te dejo el resumen de tu formulario
+                \n- Nombre y apellidos: *${state.nombre} ${state.apellidos}*
+                \n- Telefono: *${state.telefono}*`)
         }
     )
 ```
