--- a/packages/docs/src/routes/docs/fall-back/index.mdx
+++ b/packages/docs/src/routes/docs/fall-back/index.mdx
@@ -2,16 +2,17 @@ import Navigation from '../../../components/widgets/Navigation'
 
 # fallBack
 
-La función **fallBack()** es una función que se utiliza para repetir el último mensaje del flujo en caso de que el usuario no proporcione una respuesta válida. Es decir, si el usuario ingresa un mensaje que no coincide con ninguna palabra clave o respuesta esperada, el Bot puede llamar a la función **fallBack()** para volver a enviar el último mensaje y esperar una respuesta válida.
+La función **fallBack()** es una función que se utiliza para repetir el último mensaje del flujo en caso de que el usuario no proporcione una respuesta válida, es decir, si el usuario ingresa un mensaje que no coincide con la respuesta esperada, el Bot puede llamar a la función **fallBack()** para volver a enviar el último mensaje y esperar una respuesta válida.
 
 La función **fallBack()** se puede llamar dentro del método **addAnswer()** del flujo. Para ello, simplemente se llama a la función **fallBack()** dentro de una condición que comprueba si la respuesta del usuario es válida o no. Por ejemplo:
+
 ```js
 const { addKeyword } = require('@bot-whatsapp/bot')
 
 const flowString = addKeyword('hola')
-  .addAnswer('Indica cual es tu email', null, (ctx, { fallBack }) => {
+  .addAnswer('Indica cual es tu email', { capture: true }, (ctx, { fallBack }) => {
     if (!ctx.body.includes('@')) {
-      return fallBack()
+      return fallBack('Por favor ingresa un correo electrónico válido')
     } else {
       // Lógica para procesar el correo electrónico del usuario
     }
