--- a/packages/docs/src/routes/docs/flow-dynamic/index.mdx
+++ b/packages/docs/src/routes/docs/flow-dynamic/index.mdx
@@ -2,13 +2,12 @@ import Navigation from '../../../components/widgets/Navigation'
 
 # flowDynamic
 
-La función flowDynamic
- se utiliza para devolver mensajes dinámicos que pueden venir de una API o Base de datos. La función recibe un array que debe contener la siguiente estructura:
+La función `flowDynamic` se utiliza para devolver mensajes dinámicos que pueden venir de una API o Base de datos. La función recibe un array que debe contener la siguiente estructura:
 
 ```js
 const { addKeyword } = require('@bot-whatsapp/bot')
 
-const flowString = addKeyword('ver categorias')
+const flowString = addKeyword('ver categorías')
     .addAnswer('Estas son las categorías disponibles:', null, async (ctx, {flowDynamic}) => {
         const categories = await db.getCategories()
         const messages = categories.map((c) => ({body: c.name}))
@@ -16,14 +15,16 @@ const flowString = addKeyword('ver categorias')
     })
 ```
 
+---
+
 ### Más ejemplos de flowDynamic
 
 ```js
 const { addKeyword } = require('@bot-whatsapp/bot')
 
-const flowString = addKeyword('ver categorias')
+const flowString = addKeyword('ver categorías')
     .addAnswer('Estas son las categorías disponibles:', null, async (ctx, {flowDynamic}) => {
-        await flowDynamic('Enviar un mensaje text')
+        await flowDynamic('Enviar un mensaje texto')
 
         const listaDeArticulos = [
             {
@@ -41,12 +42,12 @@ const flowString = addKeyword('ver categorias')
 
         await flowDynamic(mapeoDeLista)
 
-        await flowDynamic({body:'Tambien puedes enviar un mensaje de esta manera'})
+        await flowDynamic({body:'También puedes enviar un mensaje de esta manera'})
 
         // Enviar una imagen o pdf o etc
 
-        await flowDynamic({media:'https://i.imgur.com/0HpzsEm.png'}) 
-        
+        await flowDynamic({ media: 'https://i.imgur.com/0HpzsEm.png' })
+
     })
 ```
 
