--- a/packages/docs/src/routes/docs/ctx/index.mdx
+++ b/packages/docs/src/routes/docs/ctx/index.mdx
@@ -2,9 +2,9 @@ import Navigation from '../../../components/widgets/Navigation'
 
 # ctx
 
-Esta funcion se encuentra dentro de `addAnswer` o `addAction`  
+Este objeto se encuentra en `addAnswer` y `addAction`.
 
-Se encarga de responder al usuario, puedes responder un texto o archivo adjunto.
+Este objeto puede contener datos como `from` (el número de teléfono por dónde se está comunicando el usuario) o si esperas una respuesta, también se puede usar la propiedad `body` para obtener la entrada del usuario.
 
 ```js
     const { addKeyword } = require('@bot-whatsapp/bot')
@@ -12,28 +12,27 @@ Se encarga de responder al usuario, puedes responder un texto o archivo adjunto.
     const flowWelcome = addKeyword('hola').addAnswer('¿Como es tu mail?',null, async (ctx) => {
         console.log(ctx)
     })
-
 ```
 
-### ¿Que cosas tiene el ctx?
+---
+
+### ¿Qué propiedades tiene el ctx?
 
 Dentro del ctx puedes conseguir algunas de las siguientes propiedades
 
 ```js
     const { addKeyword } = require('@bot-whatsapp/bot')
 
-    const flowWelcome = addKeyword('hola').addAnswer('¿Como es tu mail?',null, async (ctx) => {
+    const flowWelcome = addKeyword('hola').addAnswer('¿Como es tu mail?',{ capture: true }, (ctx) => {
         console.log(ctx)
 
         const numeroDeWhatsapp = ctx.from 
         const mensajeRecibido = ctx.body 
 
     })
-
 ```
 
-Tambien recomiendao que con `console.log(ctx)` puedes ver todas las propiedades que vienen incluidas, muchas de ellas pueden ser propiedades propias del `provider`
-
+Te recomendamos revisar las propiedades que contiene el objeto `ctx` usando un `console.log`. Algunas de las propiedades también pueden pertenecer al `provider`.
 
 ---
 
